clusters/apps/env/production/soho/frigate/prod/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: frigate
  annotations:
    kubernetes.io/ingress.class: "traefik-internal"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`frigate.${FAMILY_DOMAIN}`)"
      middlewares:
        - name: ak-outpost-authentik-embedded-outpost
          namespace: auth-system
      priority: 10
      services:
        - name: frigate-prod
          port: 5000
    - kind: Rule
      match: "Host(`frigate.${FAMILY_DOMAIN}`) && PathPrefix(`/outpost.goauthentik.io/`)"
      priority: 15
      services:
        - kind: Service
          name: ak-outpost-authentik-embedded-outpost
          namespace: auth-system
          port: 9000
  tls:
    secretName: heyjohn-wildcard-certificate
    domains:
      - main: frigate.${FAMILY_DOMAIN}
# ---
# apiVersion: externaldns.k8s.io/v1alpha1
# kind: DNSEndpoint
# metadata:
#   name: frigate
#   annotations:
#     external-dns/public: "true"
# spec:
#   endpoints:
#     - dnsName: frigate.${SECRET_DOMAIN}
#       recordTTL: 300
#       recordType: CNAME
#       targets:
#         - ${DYNAMIC_DOMAIN}
